Navigation alignment fixed when user is logged in. Dashboard replaced with My Profile when user is logged in. Icons added to menu items.

--- a/fireflight/src/styles/_mobile.scss
+++ b/fireflight/src/styles/_mobile.scss
@@ -117,10 +117,6 @@
         .menu-item {
             padding: auto;
             width: 80px;
-
-            img {
-                display: block;
-            }
         }
     }
 }
